# TransLlama

./: .env.example  .gitignore  Dockerfile  README.md  README_EN.md  curl_examples.sh  docker-compose.yml  main.py  models.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
api/: dependencies.py
api/routes/: chat.py  health.py  models.py  translate.py
core/: auth.py  config.py  exceptions.py  middleware.py  rate_limit.py
makewiki/: README.md  README.zh-CN.md  configuration.md  configuration.zh-CN.md  faq.md  faq.zh-CN.md  getting-started.md  getting-started.zh-CN.md  index.md  installation.md  installation.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md
makewiki/usage/: basic-usage.md  basic-usage.zh-CN.md
models/: config.py  requests.py  responses.py
services/: model_manager.py  prompt_builder.py  translation_service.py
static/: index.html
