[project]
name = "transllama"
version = "0.1.0"
description = "Self-hosted translation API backend with FastAPI and llama-cpp-python"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "llama-cpp-python>=0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "services", "models", "core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
